# xlm-ens

./: CODEOWNERS  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly-canary.yml  release.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  output.rs  signer.rs
cli/src/commands/: auction.rs  bridge.rs  completions.rs  mod.rs  nft.rs  portfolio.rs  quote.rs  register.rs  renew.rs  resolve.rs  reverse.rs  subdomain.rs  text.rs  transfer.rs  whois.rs
contracts/auction/: Cargo.toml
contracts/auction/src/: bid.rs  lib.rs  settle.rs  test.rs
contracts/bridge/: Cargo.toml
contracts/nft/: Cargo.toml
contracts/registrar/: Cargo.toml
contracts/registry/: Cargo.toml
contracts/resolver/: Cargo.toml
contracts/resolver/src/: lib.rs  test.rs
contracts/resolver/test_snapshots/test/tests/: enforces_text_record_limit_but_allows_updating_existing_key_at_limit.1.json  persists_forward_and_reverse_resolution_records.1.json  rejects_record_removal_from_non_owner.1.json  rejects_text_record_updates_from_non_owner.1.json  replacing_address_updates_forward_record_but_keeps_previous_reverse_lookup.1.json  reverse_lookup_prefers_primary_name_when_present.1.json
contracts/subdomain/: Cargo.toml
docs/: contributing-contracts.md  schemas.md  sdk-integration-tests.md  testnet-operator-runbook.md
scripts/: bootstrap.sh  check-sdk-bindings.sh
scripts/canary/: public_endpoints.sh
tests/: Cargo.toml
tests/integration/: auction_test.rs  bridge_test.rs  registrar_registry_test.rs  registrar_test.rs  registry_test.rs  subdomain_test.rs
tests/src/: lib.rs
tests/test_snapshots/: subdomain_flow_covers_controller_delegation_transfer_and_resolution.1.json
tests/test_snapshots/registrar_registry_integration/: expiry_and_grace_values_match_after_registration.1.json  full_registration_path_multi_year.1.json  registration_materialises_registry_ownership.1.json  renewal_updates_registry_expiry_and_grace.1.json
(+35 files in other folders)
