[package]
name = "xlm-ns-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
xlm-ns-auction = { path = "../contracts/auction" }
xlm-ns-sdk = { path = "../packages/xlm-ns-sdk" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
