[package]
name = "xlm-ns-resolver"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
soroban-sdk = "=26.0.0-rc.1"
xlm-ns-common = { path = "../../packages/xlm-ns-common" }

[dev-dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["testutils"] }
